# noteforge

./: .eslintrc.json  .gitignore  AGENTS.md  README.md  TECHNICAL_VERIFICATION.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.qoder/specs/: 编辑器架构优化方案_task-c80.md
.tmp/: editor-system-audit-and-optimization.md  noteforge-refactor-plan.md  noteforgeChat.md  requirements-specification.md  system-architecture-design.md
src/: App.tsx  index.css  index.html  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  test-service.key
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  config.rs  db.rs  encryption.rs  error.rs  knowledge.rs  lib.rs  local_history.rs  main.rs  pipeline.rs  scratch.rs  vector.rs  watcher.rs  workbench_session.rs  workspace_draft.rs
src-tauri/src/commands/: ai.rs  config.rs  editor.rs  encryption.rs  file.rs  knowledge.rs  local_history.rs  memory.rs  mod.rs  scratch.rs  search.rs  vault_watch.rs  workbench_session.rs  workspace.rs  workspace_draft.rs
src-tauri/src/models/: ai.rs  config.rs  editor.rs  encryption.rs  file.rs  graph.rs  link.rs  memory.rs  mod.rs  note.rs  scratch.rs  search.rs  tag.rs  workspace.rs  workspace_draft.rs
src-tauri/src/repositories/: embedding_repo.rs  link_repo.rs  mod.rs  note_repo.rs  tag_repo.rs  workspace_repo.rs
src-tauri/tests/: dataflow_tests.rs  integration_test.rs  ipc_contract_tests.rs
src-tauri/untitled:/tab-vzsh92rc3/: untitled-1.md
src-tauri/untitled:/tab-y8wvcmkfg/: untitled-1.md
(+492 files in other folders)
